ubiquity (1.5.3) UNRELEASED; urgency=low

  * Drop into pdb.post_mortem on non-SyntaxError exceptions if the --pdb
    option is given and ubiquity is running from a terminal.
  * Work around hang on PS3 by stopping various non-essential processes
    first (LP: #106683).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 07 Jun 2007 09:31:53 +0100

ubiquity (1.5.2) gutsy; urgency=low

  [ Evan Dandrea ]
  * Prevent mounted volumes icons from appearing on the desktop.
    (LP: #105531)
  * Make sure the summary question regex gets split properly.
  * Fix typo in base frontend get_summary_device stub.

  [ Colin Watson ]
  * Automatic update of included source packages: console-setup 1.16ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 05 Jun 2007 09:03:20 +0100

ubiquity (1.5.1) gutsy; urgency=low

  * Install doc/README in the ubiquity binary package.
  * Update console-setup component for Lithuanian changes in console-setup
    1.16ubuntu1.
  * Remove stray references to ubiquity.settings.
  * Restore distribution() function used by bin/ubiquity, previously in
    ubiquity.misc.
  * Clean up some breakage from ubiquity.misc.ex -> ubiquity.misc.execute
    renaming.
  * Automatic update of included source packages: console-setup 1.16ubuntu2,
    partman-partitioning 50ubuntu1, silo-installer 1.10ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 04 Jun 2007 16:32:50 +0100

ubiquity (1.5.0) gutsy; urgency=low

  * Fix escaping of migration-assistant summary.
  * Only display partitions with scheduled migrations in the summary, and
    improve the formatting slightly.
  * Remove another stray newline from the migration-assistant summary.
  * GTK frontend:
    - Pressing Enter in the migration-assistant user/password entry boxes
      activates the Forward button.
    - Drop X-Ubuntu-Gettext-Domain=ubiquity in the .desktop file for now, to
      work around a bug somewhere that causes the translations in the
      .desktop file to be ignored in that case.